# easyappoint

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml  release.yml.save
docs/: index.html
src/: main.rs  models.rs
submission/: Cargo.toml  calendar.rs  scheduler.rs
